#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package XtcInput
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-10-02
2014-07-22 David Schneider
- add backward compatible XtcStreamDgIter constructor for package PSXtcQC
- also add backward compatiable DgramReader constructor - though doesn't 
  appear to be needed
	

Tag: V00-10-01
2014-07-18 David Schneider
- create artificial tag to try to bypass svn protect tags hook

Tag: V00-10-00
2014-07-18 David Schneider
- trac ticket:279 merge control and DAQ streams into the same event
  Introduce StreamDgram, keep track of L1Block number
  Introduce fiducial/second based comparisons
  Rework XtcStreamMerger
	
Tag: V00-09-13
2014-05-13 Christopher O'Grady
- add Dgram::operator< so indexing can sort non-event datagrams
  in time order

Tag: V00-09-11
2014-03-12 Igor Gaponenko
- added support for filtering on stream ranges

Tag: V00-09-10
2014-03-11 Andy
- improve handling of EOF while reading datagram payload

Tag: V00-09-09
2014-02-26 Andy
- add XtcFilterTypeIdSrc filter class for filtering XTC contents

Tag: V00-09-08
2014-01-06 Andy Salnikov
- XtcChunkDgIter::next() - add protection for corrupted headers, checks 
  extent size of the top-most XTC and raises exception if size is 
  lower that size of XTC header

Tag: V00-09-07
2013-11-07 David Schneider
- add convenience function to DgHeader

Tag: V00-09-06
2013-07-21 Andy Salnikov
- update test applications for changes in CmdLine interfaces

Tag: V00-09-05
2013-07-05 Andy Salnikov
- raise an exception when dataset makes empty list of files

Tag: V00-09-04
2013-06-10 Andy Salnikov
- implement simple exception transport for datagram queue

Tag: V00-09-03
2013-05-22 Andy Salnikov
- update doxygen comments
