@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-10-03
+2014-08-01 David Schneider
+- discard L1Accept's that have 0x1FFFF as the fiducial. jira ticket PSAS-13
+ 
 Tag: V00-10-02
 2014-07-22 David Schneider
 - add backward compatible XtcStreamDgIter constructor for package PSXtcQC
